Apply code review suggestion to use EnumMap